# CMakeList.txt : CMake project for Raytracing-In-Weekend, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (Raytracing-In-Weekend "Raytracing-In-Weekend.cpp" "Raytracing-In-Weekend.h")

# TODO: Add tests and install targets if needed.
